compiler/toc_hir_lowering/tests/snapshots/lowering__lower_pointer_ty-7.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "type _ : unchecked ^"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..20): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..20): []
        StmtItem@(FileId(1), 0..20): ItemId(0)
          Type@(FileId(1), 0..20): "_"@(FileId(1), 5..6)
            Pointer@(FileId(1), 9..20): Unchecked
error in file FileId(1) at 19..20: unexpected end of file
| error in file FileId(1) for 19..20: expected type specifier after here

