compiler/toc_hir_lowering/tests/snapshots/lowering__lower_pointer_ty.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "type _ : pointer to int"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..23): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..23): []
        StmtItem@(FileId(1), 0..23): ItemId(0)
          Type@(FileId(1), 0..23): "_"@(FileId(1), 5..6)
            Pointer@(FileId(1), 9..23): Checked
              Primitive@(FileId(1), 20..23): Int

