compiler/toc_hir_lowering/tests/snapshots/lowering__lower_prim_type-15.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "var _ : string"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..14): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..14): []
        StmtItem@(FileId(1), 0..14): ItemId(0)
          ConstVar@(FileId(1), 0..14): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..14): String

